test/valid/objlit2.js
function f(x) {
    return x.c;
}
f({a:2, c:3});
f({b:true, c:3});
f;
// var x = { a: 2, b: 'a' };
// x = { a:3, b:'b',c:0 };
// x.c;
